* Some cppcheck results from Martin Ettl
* Don't fail to set proper .jobmatrix filename when not running sniffer
* Properly index config table in fitsGM.c
* makefits: pass --override-version on to difx2fits
* by default produce sniffer output only for bin=0 phasecentre=0
* conform to new variable names in difxio, and more importantly, don't go out of the way to get frequency labelling wrong!

Version 2.5
* Require difxio 2.10
* Post DiFX-1.5
* Sniffer: look for spectral lines

Version 2.4
* Post NRAO-DiFX 1.1 development
* Require difxio 2.5
* Fix numbering of FITS Source IDs
* Better handle transitional scans
* don't use bcopy -- use memcpy instead.
* fix sense of phase for LSB sniffer output data
* add makefits wrapper program
* Fix model tables when crossing midnight
* Version for DiFX-1.5

Version 2.3
* Support for writing FITS files larger than 2 GiB
* Option to force each input file into its own output file
* Pay attention to difx versions
* Don't write out vis records that occur over a scan change
* int -> double mjd for gain curve selection
* Respect DIFX_GROUP_ID and set umask
* Write sniffer file output
* Version for NRAO-DiFX 1.1

Version 2.2
* Use .im file to generate ML, MC table if file exists
* Minor improvements to FR, ML, MC, AG, CT, SU, GN, TS, FL tables
* Fix MC table -- index to model is dsId, not antId

Version 2.1
* Sorts by antenna name by default.  override with -k

Version 2.0
* New visibility writing code -- will merge multiple input files
  into single FITS file in time order.
* use fitsSourceId to keep the source table as small as possible, without
  repeats
* fix delay values in ML (IM) table
* fix uninitialized freq offset vals in SU table
* use difxio >= 2.0
* start of pulsar table support

Version 1.9
* Use difxio >= 1.7

Version 1.8
* Use vlog output to generate FG, TS, PH, WX tables (WX is suspect)
* Use gain curve files to generate GC (from env var GAIN_CURVE_PATH)
* Use autoconf endianness detection -- remove byteorder.[ch]